@@ -65,6 +65,7 @@ namespace bt
 		static bool isEnabled() {return pex_enabled;}
 	private:
 		void encode(BEncoder & enc,const std::map<Uint32,net::Address> & ps);
+		void encodeFlags(BEncoder & enc,const std::map<Uint32,Uint8> & flags);
 		
 	private:
 		Peer* peer;
