@@ -5,6 +5,8 @@ Changes in 3.1.3 :
 systray.
 - Make sure duplicate URL's are not shown in trackerview
 - Fix problem causing file priorities not to be read at startup
+- Make sure added.f is filled in with the proper flags for each peer in the
+added field of a PEX message (169014)
 
 Changes in 3.1.2 :
 - Improved performance of GUI updates
